--- a/week02/styles/media-query-large.css
+++ b/week02/styles/media-query-large.css
@@ -1,9 +1,8 @@
 @media screen and (min-width:500px) {
     header{
         background-color: black;
-        color: white;
+        color: white;}
         main{
             grid-template-columns:1fr 1fr;
         }
     }
-}
