ammended media-query file

--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -17,3 +17,10 @@ section{
     padding: 1rem;
     background-color: #fff;
 }
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/roboto/v32/KFOmCnqEu92Fr1Me5Q.ttf) format('truetype');
+}
