added a few changes

--- a/week03/place.css
+++ b/week03/place.css
@@ -13,6 +13,17 @@
   
   header img {
     width: 100%;
+    background-color: #004f98;
+    }
+
+  h1{
+    text-align: center;
+  }
+  #hero-small{
+    justify-items: center;
+  }
+  #data{
+    text-align: center;
   }
   
   #weather h2 {
