--- a/week02/styles/temples.css
+++ b/week02/styles/temples.css
@@ -7,10 +7,13 @@
 }
  
 body {
-    font-family: 'Roboto';
+    font-family: 'Roboto' , 'Times New Roman', Times, serif;
+    font-size: medium;
+    font-weight: 700;
+    font-style: normal;
     margin: 0;
     padding: 0;
-    background-color: beige;
+    background-color: rgb(144, 144, 142);
 }
  
 img {
@@ -19,11 +22,11 @@ img {
 }
  
 h1 {
-    margin-bottom: auto;
-    padding-bottom: 10px;
+    margin-bottom: 0;
+    padding-bottom: 15px;
     text-align: center;
     font-size: 3rem;
-}
+    }
  
 h2 {
     text-align: center;
@@ -33,9 +36,9 @@ header {
     margin: 0;
     background-color: navy;
     color: white;
-    display: flex;
+    display:flex;
     justify-content: space-between;
-    align-items: center;
+    
 }
  
 .navigation {
@@ -43,8 +46,8 @@ header {
     margin: 0 auto;
 }
  
-.menu {
-    display: block;
+menu {
+    display:block;
     font-size: 2rem;
     font-weight: 700;
     text-decoration: none;
@@ -54,6 +57,7 @@ header {
     top: 3rem;
     right: 1rem;
     background-color: navy;
+    text-align: center;
 }
  
 .active {
@@ -61,9 +65,10 @@ header {
 }
  
 nav {
-    background-color: #023a5fc0;
+    background-color: #dbdedec0;
     margin: 0 auto;
     max-width: 800px;
+    
 }
  
 nav ul {
@@ -86,13 +91,14 @@ a:visited {
     color: brown
 }
  
-.hamburger {
-    background: none;
+/*.hamburger {
+    background:none;
     border: none;
     font-size: 1.5rem;
-    color: #fff;
+    color: #f4eeee;
     cursor: pointer;
-}
+    align-self:flex-end;
+    }*/
  
 .images_container {
     background-color: rgb(197, 197, 118);
