modify css place file

--- a/week03/place.css
+++ b/week03/place.css
@@ -49,9 +49,12 @@
   footer{
     background-color: brown;
     text-align: center;
-    border: 10px;
     color: antiquewhite;
-    font-size: 2rem;
+    max-width: 640px;
+    margin: 1rem auto;
+    border: 1px solid #bbb;
+    padding: 1.1rem;
+    font-size: larger
   }
   
   
