--- a/week03/place.css
+++ b/week03/place.css
@@ -15,6 +15,7 @@
   header img {
     width: 100%;
     background-color: #004f98;
+    padding: 20px;
     }
 
   h1{
@@ -50,11 +51,11 @@
     background-color: brown;
     text-align: center;
     color: antiquewhite;
-    max-width: 640px;
+    max-width: auto;
     margin: 1rem auto;
     border: 1px solid #bbb;
     padding: 1.1rem;
-    font-size: larger
+    font-size: larger;
   }
   
   
