added some changes on css and html files

--- a/week03/place.css
+++ b/week03/place.css
@@ -60,9 +60,12 @@
     padding: 1.1rem;
     font-size: larger;
   }
-  
+  footer img{
+    border-radius: 15px;
+    width: 15px;
+    height: 15px;
 
-    
+  }
   }
   
   
