--- a/week03/place.css
+++ b/week03/place.css
@@ -14,7 +14,8 @@
   }
   
   header img {
-    width: 100%;
+    width:100%;
+    height: 600px;;
     background-color: #004f98;
     padding: 20px;
     }
