--- a/week03/place.css
+++ b/week03/place.css
@@ -10,19 +10,25 @@
     color: var(--text-color);
     margin: 0;
     padding: 0;
-    background-color: aliceblue;
+    background-color: rgb(184, 207, 227);
   }
   
   header img {
-    width:100%;
-    height: 600px;;
-    background-color: #004f98;
-    padding: 20px;
+    width: 100%;
+    height: 600px;
+    background-color: brown;
+    padding: 2px;
+    padding-top: 25px;
+  
     }
 
   h1{
     text-align: center;
     width: auto;
+    height: 50px;
+    padding: 20px;
+    background-color: brown;
+    color: white;
   }
   #hero-small{
     justify-items: center;
@@ -36,7 +42,7 @@
   #data{
     text-align: center;
     background-color: #004f98;
-    color: antiquewhite;
+    color: white;
     align-content: center;
     border: 15px;
     font-size: medium;
@@ -54,7 +60,7 @@
   footer{
     background-color: brown;
     text-align: center;
-    color: antiquewhite;
+    color: white;
     max-width: 100%;
     margin: 1rem auto;
     border: 1px solid #bbb;
