--- a/week04/styles/filtered-temples.css
+++ b/week04/styles/filtered-temples.css
@@ -75,3 +75,8 @@ body {
     text-align: center;
     font-size: 20pt;
   }
+  footer img{
+    border-radius: 15px;
+    width: 15px;
+    height: 15px;
+  }
