--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -37,6 +37,7 @@ body {
   padding: 4em;
   font-size: 18px;
   text-align: center;
+  
 }
 
 img {
@@ -147,7 +148,7 @@ nav a:visited {
 
 nav a:hover {
   color: var(--nav-hover-link-color);
-  background-color: var(--nav-hover-background-color);
+  background-color: var(--nav-hover-color);
 }
 
 .sitemap {
