--- a/project/styles/ethekwini_chamber.css
+++ b/project/styles/ethekwini_chamber.css
@@ -89,7 +89,7 @@ caption{
 
 footer {
     background-color: #5f5aa2;
-    color: white;
+    color: black;
     text-align: center;
     padding: 1em 0;
     margin:auto;
