--- a/project/styles/ethekwini_chamber.css
+++ b/project/styles/ethekwini_chamber.css
@@ -36,7 +36,7 @@ h1{
     justify-content: center;
     list-style-type: none;
     margin: 0;
-    padding: 0 auto;
+    padding:1rem;
     
 }
 
@@ -65,6 +65,7 @@ main {
     background-image: none;
     background-color: #413f34;
     box-sizing: border-box;
+    box-shadow:none;
 }
 .flex-container{
     display: flex;
@@ -153,7 +154,7 @@ form input, form select, form textarea, form text  {
 .home-grid{
   display: grid;
   grid-template-columns: repeat(7,1fr);
-  grid-template-rows: 4,1fr;
+  grid-template-rows: (4,1fr);
   row-gap: 1px;
   column-gap: 1px;
 }
@@ -162,41 +163,41 @@ form input, form select, form textarea, form text  {
   grid-row: 1/2;
   width: 100%;
   height:fit-content;
-  box-sizing:fit-content;
+  box-sizing:border-box;
   box-shadow: 5px 5px 10px;
   
 }
 .smme-card{
 grid-column:3/4;
 grid-row: 1/2;
-box-sizing:fit-content;
+box-sizing:border-box;
 box-shadow: 5px 5px 10px;
 }
 .events-card{
 grid-column: 5/6;
 grid-row: 1/2;
-box-sizing:fit-content;
+box-sizing:border-box;
   box-shadow: 5px 5px 10px;
 }
 
 .community-card{
   grid-column: 7/8;
   grid-row: 1/2;
-  box-sizing:fit-content;
+  box-sizing:border-box;
   box-shadow: 5px 5px 10px;
   }
   
   .service-card{
     grid-column: 7/8;
     grid-row: 3/4;
-    box-sizing:fit-content;
+    box-sizing:border-box;
     box-shadow: 5px 5px 10px;
 
     }
     .joiningform{
       grid-column: 1/2;
       grid-row: 3/4;
-      box-sizing:fit-content;
+      box-sizing:border-box;
       box-shadow: 5px 5px 10px;
       row-gap: 10px;
       }
